@@ -10,6 +10,7 @@
   * Should create cast for unresolved templated parents.
   * Added 'ignore' setting for parser.
   * Ignoring 'struct' keyword in param (C++ name scoping rules apply).
+  * Casting enum types to 'int' instead of double.
 
 == 2.0.0 2012-01-21
 * Complete rewrite in Lua
